Fixed accessibility issues - rendered list items under <ul> tags and wrapped list items with <li> tags (#8)

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -35,7 +35,7 @@ li {
   padding: 0.7rem 1.2rem;
   border: 0;
   transition: all 0.25s ease;
-  font-weight: 500;
+  font-weight: 600;
 
   &-sm {
     width: 150px;
@@ -51,7 +51,7 @@ li {
     cursor: pointer;
   }
   &-primary {
-    background: #7569ff;
+    background: #6d61ee;
     color: #fff;
   
     &:hover {
@@ -61,9 +61,6 @@ li {
     }
   }
 
-  &-3d {
-    
-  }
 }
 .section-title {
   font-size: 2.5rem;
